# processfighter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
include/: game_state.h  global_game_state.h  messages.h  receiving_socket.h  receiving_socket.hpp  ship2_png.h  ship_png.h  state_interface.hpp  states.h
include/states/: challenged.h  countdown.h  fighting.h  initializing.h  probing.h  selecting.h  waiting.h
include/utils/: bullet.h  console.h  menu.h  ship.h
src/: game_state.cpp  global_game_state.cpp  main.cpp  messages.cpp  receiving_socket.cpp  states.cpp
src/states/: challenged.cpp  countdown.cpp  fighting.cpp  initializing.cpp  probing.cpp  selecting.cpp  waiting.cpp
src/utils/: bullet.cpp  console.cpp  menu.cpp  ship.cpp
test/: game_state_test.cpp  placeholder_test.cpp
